--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@ footer {
 
 <main>
     <div class="card" style="max-width:420px;margin:auto;">
-        <h2 style="text-align:center;">selamat Datang</h2>
+        <h2 style="text-align:center;">Selamat Datang</h2>
         <p style="text-align:center;color:gray;">
             Silakan login untuk mengakses
         </p>
@@ -138,6 +138,7 @@ document.getElementById("loginForm").addEventListener("submit", function(e) {
 </script>
 
 <script src="script.js"></script>
+
 
 
 
